Changed heading, question/answers, and R package references for consistency with TAME module style guide.

--- a/vignettes/TAME-toolkit-clean.Rmd
+++ b/vignettes/TAME-toolkit-clean.Rmd
@@ -55,7 +55,7 @@ Fall 2023
 
 Environmental health research related to chemical exposures often requires accessing and wrangling chemical-specific data. The CompTox Chemicals Dashboard (CCD), developed by the United States Environmental Protection Agency, is a publicly-accessible database that integrates chemical data from multiple domains. Chemical data available on the CCD include physicochemical, environmental fate and transport, exposure, toxicokinetics, functional use, in vivo toxicity, in vitro bioassay, and mass spectra data. The CCD was first described in Williams et al. (2017), and has been continuously expanded since. The CCD is heavily used by researchers who do cheminformatics work of various kinds -- computational toxicology, computational exposure science, analytical chemistry, chemical safety assessment, etc. The CCD is used by cheminformaticians not only at EPA, but across governmental agencies both within the U.S. and worldwide; in private industry; in non-governmental organizations; in academia; and others. It has become an indispensable tool for many researchers.
 
-This training module provides an overview of the physico-chemical, hazard, and bioactivity data available through the CCD; different ways to access these data; and some examples of how these data may be used. We will first introduce the CCD and how to access it. Then we will focus on an automated, programmatic method for retrieving data from the CCD using the `ccdR` R package. Through some basic data visualization and analysis using the R programming language, we will explore some data retrieved from the CCD, and gain insights both in how to wrangle the data and combine different methods of accessing the data to build automated pipelines for use in more complex settings.
+This training module provides an overview of the physico-chemical, hazard, and bioactivity data available through the CCD; different ways to access these data; and some examples of how these data may be used. We will first introduce the CCD and how to access it. Then we will focus on an automated, programmatic method for retrieving data from the CCD using the *ccdR* R package. Through some basic data visualization and analysis using the R programming language, we will explore some data retrieved from the CCD, and gain insights both in how to wrangle the data and combine different methods of accessing the data to build automated pipelines for use in more complex settings.
 
 ## Training Module's Environmental Health Questions
 
@@ -79,14 +79,14 @@ This training module was specifically developed to answer the following question
 
 ## Script Preparations
 
-## Cleaning the global environment
+### Cleaning the global environment
 
 ```{r, eval=FALSE}
 rm(list=ls())
 ```
 
 
-## Installing required R packages
+### Installing required R packages
 
 ```{r, eval=FALSE}
 if (!requireNamespace('ccdR'))
@@ -96,7 +96,7 @@ if (!requireNamespace('ggplot2'))
   install.packages('ggplot2')
 ```
 
-## Loading R packages
+### Loading R packages
 
 ```{r}
 # Used to access the CCTE APIs
@@ -144,7 +144,7 @@ knitr::include_graphics('./Pictures/CCD_Batch_Search_customize_export_results.pn
 
 The web interface for batch search only allows input of 10,000 identifiers at a time. If a user needs to retrieve information for more than 10,000 chemicals, they will need to separate their identifiers into multiple batches and search each one separately.
 
-### Challenges of web-based Dashboard search
+### Challenges of web-based dashboard search
 
 Practicing researchers typically end up with a Dashboard workflow that looks something like this:
 
@@ -183,7 +183,7 @@ knitr::include_graphics('./Pictures/CCTE_Chemical_API_endpoints.png')
 
 The APIs can be explored through the pictured web interface at https://api-ccte.epa.gov/docs/chemical.html .
 
-### CCTE API Authentication
+### CCTE API authentication
 
 `Authentication` is the first tab on the left. Authentication is required to use the APIs. To authenticate yourself in the API web interface, input your unique API key.
 
@@ -192,13 +192,13 @@ knitr::include_graphics("./Pictures/CCTE_API_Key_authentication.png")
 ```
 
 
-### CCTE API Endpoints
+### CCTE API endpoints
 
 
 On the left of the API web interface, there are several different tabs, one for each endpoint in the `Chemical` domain. The endpoints are organized by the type of information provided. For instance, the `Chemical Details Resource` endpoint provides basic chemical information; the `Chemical Property Resource` endpoint provides more comprehensive physico-chemical property information; the `Chemical Fate Resource` endpoint provides chemical fate and transport information; and so on. 
 
 
-### Constructing CCTE API Requests
+### Constructing CCTE API requests
 
 As mentioned above, APIs effectively automate the process of accessing and downloading data from the web pages that make up the CCD. APIs do this by automatically constructing requests using the Hypertext Transfer Protocol (HTTP) that enables communication between clients (e.g. your computer) and servers (e.g. the CCD).
 
@@ -229,9 +229,9 @@ knitr::include_graphics("./Pictures/BPA_chemicaldetailstandard.png")
 ```
 
 
-Formatting an http request is not necessarily intuitive nor worth the time for someone not already familiar with the process, so these endpoints may provide a resource that for many would require a significant investment in time and energy to learn how to use. However, there is a solution to this in the form of the R package `ccdR`.
+Formatting an http request is not necessarily intuitive nor worth the time for someone not already familiar with the process, so these endpoints may provide a resource that for many would require a significant investment in time and energy to learn how to use. However, there is a solution to this in the form of the R package *ccdR*.
 
-`ccdR` was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. As an example, we demonstrate the ease with which one may retrieve the information given by this endpoint for Bisphenol A using the `ccdR` approach and contrast it with the approach using the CCD website or CCTE `Chemical` Endpoint website.
+*ccdR* was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. As an example, we demonstrate the ease with which one may retrieve the information given by this endpoint for Bisphenol A using the *ccdR* approach and contrast it with the approach using the CCD website or CCTE `Chemical` Endpoint website.
 
 
 
@@ -266,7 +266,7 @@ names(BPA_chemical_detail)
 ```
 
 
-## Comparing Physico-chemical properties between Two Important Environmental Contaminant Lists
+## Comparing Physico-chemical Properties between Two Important Environmental Contaminant Lists
 
 We study two different data sets contained in the CCD and observe how they relate and how they differ. The two data sets that we will explore are a water contaminant priority list and an air toxics list.  
 
@@ -307,7 +307,7 @@ head(ccl4, 1)
 ```
 
 
-### Accessing the physico-chemical data
+### Accessing the physico-chemical property data
 
 Once we have the chemicals in each list, we access their physico-chemical properties. We will use the batch search forms of the function `get_chem_info()`, to which we supply a list of DTXSIDs.
 
@@ -352,7 +352,9 @@ ccl4_phys_chem[propertyId == 'melting-point', .(Mean = mean(value)),
 
 These results tell us about some of the reported physico-chemical properties of the data sets.
 
-*With this, we can answer **Environmental Health Question 1**:* After automatically pulling the fourth Drinking Water Contaminant Candidate List from the CompTox Chemicals Dashboard, list the properties and property types present in the data. What are the mean values for a specific property when grouped by property type and when ungrouped?
+### *Answer to Environmental Health Question 1*
+
+*With this, we can answer **Environmental Health Question 1:*** After automatically pulling the fourth Drinking Water Contaminant Candidate List from the CompTox Chemicals Dashboard, list the properties and property types present in the data. What are the mean values for a specific property when grouped by property type and when ungrouped?
 
 **Answer:** The mean "boiling-point" is 251.1072 degrees Celsius for CCL4, with mean values of 250.5943 and 251.4001 for experimental and predicted, respectively. The mean "melting-point" is 33.93924 degrees Celsius for CCL4, with mean values of 23.18876 and 47.98422 for experimental and predicted, respectively.
 
@@ -620,7 +622,9 @@ boiling
 
 A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL4, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experimental and predicted for these two data sets as it was in the previous cases of physico-chemical properties we investigated.
 
-*Through inspecting the last several plots, we can answer **Environmental Health Question 2**:* The physico-chemical property data are reported with both experimental and predicted values present for many chemicals. Are there differences between the mean predicted and experimental results for a variety of physico-chemical properties? 
+### *Answer to Environmental Health Question 2*
+
+*Through inspecting the last several plots, we can answer **Environmental Health Question 2:*** The physico-chemical property data are reported with both experimental and predicted values present for many chemicals. Are there differences between the mean predicted and experimental results for a variety of physico-chemical properties? 
 
 **Answer**: There are indeed differences between the mean values of various physico-chemical properties when grouped by predicted or experimental. In the case of "vapor-pressure", the means of predicted values tend to be a little lower than experimental, though they are much closer in the case of NATADB than CCL4. The trend of lower predicted means compared to experimental means is more clearly demonstrated for "henrys-law" values in both data sets. In the case of "boiling-point", the predicted values are greater than the experimental values, though this is much more pronounced in CCL4 while the set of means for NATADB are again fairly close. 
 
@@ -628,7 +632,7 @@ A visual inspection of this set of graphs is not as clear as in the previous cas
 
 
 
-## Hazard data: Genotoxicity
+## Hazard Data: Genotoxicity
 
 Now, having examined some of the distributions of the physico-chemical properties of the two lists, aggregated between predicted and experimental, we move towards learning more about these chemicals beyond physico-chemical properties. Specifically, we will examine their genotoxicity.
 
@@ -794,7 +798,9 @@ natadb_genetox_details[assayCategory == 'ND', .N, by = .(assayType)]
 natadb_genetox_details[assayCategory == 'in vivo', .N, by = .(assayType)]
 ```
 
-*From these initial explorations of the data, we can answer **Environmental Health Question 3**:* After pulling the genotoxicity data for the different environmental contaminant data sets, list the assays associated with the chemicals in each data set. How many unique assays are there in each data set? What are the different assay categories and how many unique assays for each assay category are there?
+### *Answer to Environmental Health Question 3*
+
+*From these initial explorations of the data, we can answer **Environmental Health Question 3:*** After pulling the genotoxicity data for the different environmental contaminant data sets, list the assays associated with the chemicals in each data set. How many unique assays are there in each data set? What are the different assay categories and how many unique assays for each assay category are there?
 
 **Answer**: There are 90 unique assays for CCl4 and 114 unique assays for NATADB. The different assay categories are "in vitro", "ND", and "in vivo", with 65 unique "in vitro" assays for CCl4 and 83 for NATADB, 3 unique "ND" assays for CCL4 and 3 for NATADB, and 22 unique "in vivo" assays for CCL4 and 28 for NATADB.
 
@@ -806,7 +812,9 @@ ccl4_genetox_details[, .(DTXSIDs = length(unique(dtxsid))), by = .(assayResult)]
 natadb_genetox_details[, .(DTXSIDs = length(unique(dtxsid))), 
                        by = .(assayResult)]
 ```
-*With this data we may now answer **Environmental Health Question 4**:* The genotoxicity data contains information on which assays have been conducted for different chemicals and the results of those assays. How many chemicals in each data set have a ‘positive’, ‘negative’, and ‘equivocal’ value for the assay result?
+### *Answer to Environmental Health Question 4*
+
+*With this data we may now answer **Environmental Health Question 4:*** The genotoxicity data contains information on which assays have been conducted for different chemicals and the results of those assays. How many chemicals in each data set have a ‘positive’, ‘negative’, and ‘equivocal’ value for the assay result?
 
 **Answer**: For CCL4, there are 64 unique chemicals that have a negative assay result, 53 that have a positive result, and 15 that have an equivocal result. For NATADB, there are 141 unique chemicals that have a negative assay result, 130 that have a positive result, and 48 that have an equivocal result. Observe that since there are 72 unique `dtxsid` values with assay results in CCL4 and 153 in NATADB, there are several chemicals that have multiple assay results.
 
@@ -828,13 +836,15 @@ ccl4_genetox_details[dtxsid == 'DTXSID0020153' & assayResult == 'positive',
                      .(Number_of_assays = .N), by = .(assayType)][order(-Number_of_assays),]
 ```
 
-*With these data.tables, we may answer **Environmental Health Question 5**:* Based on the genotoxicity data reported for the chemical with DTXSID identifier DTXSID0020153, how many assays resulted in a positive/equivocal/negative value? Which of the assays were positive and how many of each were there for the most reported assays?
+### *Answer to Environmental Health Question 5*
+
+*With these data.tables, we may answer **Environmental Health Question 5:*** Based on the genotoxicity data reported for the chemical with DTXSID identifier DTXSID0020153, how many assays resulted in a positive/equivocal/negative value? Which of the assays were positive and how many of each were there for the most reported assays?
 
 **Answer**: There were five assays that produced a negative result, 22 that produced a positive result, and one that produced an equivocal result. Of the 22 positive assays, "bacterial reverse mutation assay" and "Ames" were the most numerous, with three each.
 
 
 
-## Hazard resource
+## Hazard Resource
 
 
 Finally, we examine the hazard data associated with the chemicals in each data set. For each chemical, there will be potentially hundreds of rows of hazard data, so the returned results will be much larger than in most other API endpoints.
@@ -949,7 +959,9 @@ natadb_hazard[humanEcoNt %in% 'human health' &
                                                                 -Hits)]
 ```
 
-*With these results we may answer **Environmental Health Question 6**:* After pulling the hazard data for the different data sets, list the different exposure routes for which there is data. What are the unique risk assessment classes for hazard values for the oral route and for the inhalation exposure route? For each such exposure route, which risk assessment class is most represented by the data sets?
+### *Answer to Environmental Health Question 6*
+
+*With these results we may answer **Environmental Health Question 6:*** After pulling the hazard data for the different data sets, list the different exposure routes for which there is data. What are the unique risk assessment classes for hazard values for the oral route and for the inhalation exposure route? For each such exposure route, which risk assessment class is most represented by the data sets?
 
 **Answer**: We listed the general exposure routes above for the hazard data associated with the chemicals in each data set. Restricting our attention to human hazard data, the "acute" `riskAssessmentClass` is most represented by the inhalation exposure route and "chronic" for the oral exposure route for both the CCL4 and NATADB data sets. 
 
@@ -981,7 +993,9 @@ natadb_hazard[humanEcoNt %in% 'human health' &
 intersect(natadb_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'inhalation', unique(toxvalType)], natadb_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'oral', unique(toxvalType)])
 ```
 
-*With the results above, we may answer **Environmental Health Question 7**:* There are several types of toxicity values for each exposure route. List the unique toxicity values for the oral and inhalation routes. What are the unique types of toxicity values for the oral route and for the inhalation route? How many of these are common to both the oral and inhalation routes for each data set?
+### *Answer to Environmental Health Question 7*
+
+*With the results above, we may answer **Environmental Health Question 7:*** There are several types of toxicity values for each exposure route. List the unique toxicity values for the oral and inhalation routes. What are the unique types of toxicity values for the oral route and for the inhalation route? How many of these are common to both the oral and inhalation routes for each data set?
 
 **Answer**: There are 24 toxicity value types shared between the oral and inhalation exposure routes for CCL4 and 29 for NATADB. The lists above indicate the variety of toxicity values present in the hazard data for the two different exposure routes we have considered.
 
@@ -1111,13 +1125,15 @@ natadb_rfd[, .(numeric_value = min(toxvalNumeric),
            by = .(dtxsid)][order(numeric_value),]
 ```
 
-*With these results, we may answer **Environmental Health Question 8**:* When examining different toxicity values, the data may be reported in multiple units. To assess the relative hazard from this data, it is important to take into account the different units and adjust accordingly. List the units reported for the cancer slope factor, reference dose, and reference concentration values associated with the oral and inhalation exposure routes for human hazard. Which chemicals in each data set have the highest cancer slope factor, lowest reference dose, and lowest reference concentration values?
+### *Answer to Environmental Health Question 8*
+
+*With these results, we may answer **Environmental Health Question 8:*** When examining different toxicity values, the data may be reported in multiple units. To assess the relative hazard from this data, it is important to take into account the different units and adjust accordingly. List the units reported for the cancer slope factor, reference dose, and reference concentration values associated with the oral and inhalation exposure routes for human hazard. Which chemicals in each data set have the highest cancer slope factor, lowest reference dose, and lowest reference concentration values?
 
 **Answer**: The units for these three toxicity value types for CCL4 are given by "mg/m3", "g/m3", "ug/m3" for RfC, "mg/kg-day", "mg/kg" for RfD, and "(mg/kg-day)-1" for Cancer Slope Factor. For NATADB, the units for RfC are given by "mg/m3" and "ppm", for RfD by "mg/kg-day", "mg/kg", and for Cancer Slope Factor by "(mg/kg-day)-1".  For CCL4, the chemical DTXSID2021028 has the highest CsF at 150 (mg/kg-day)-1, the chemical DTXSID1031040 has the lowest RfC value at 6.0e-9 mg/m3, and the chemical DTXSID7021029 has the lowest RfD value at 4e-6 mg/kg. For NATADB, the chemical DTXSID2020137 has the highest CsF at 500 (mg/kg-day)-1, the chemical DTXSID1020516 has the lowest RfC value at 2.0e-6 mg/m3, and the chemical DTXSID7021029 had the lowest RfD at 4e-6 mg/kg-day.
 
-## Concluding remarks
+## Concluding Remarks
 
-In conclusion, we explored how one can access publicly available data from the CompTox Chemicals Dashboard programmatically using the CCTE APIs via the `ccdR` R package. In the examples above, we investigated different types of data associated with chemicals, visualized and aggregated the data, and employed different data wrangling techniques using data.tables to answer the proposed environmental health questions. With these tools, one can build workflows that take in a list of chemicals and gather and process data associated with those chemicals through the CCTE APIs. Consider how you might use this functionality for building models in your own work.
+In conclusion, we explored how one can access publicly available data from the CompTox Chemicals Dashboard programmatically using the CCTE APIs via the *ccdR* R package. In the examples above, we investigated different types of data associated with chemicals, visualized and aggregated the data, and employed different data wrangling techniques using data.tables to answer the proposed environmental health questions. With these tools, one can build workflows that take in a list of chemicals and gather and process data associated with those chemicals through the CCTE APIs. Consider how you might use this functionality for building models in your own work.
 
 ## Test Your Knowledge
 
