--- a/vignettes/TAME-toolkit-clean.Rmd
+++ b/vignettes/TAME-toolkit-clean.Rmd
@@ -44,11 +44,11 @@ if (!library(ccdR, logical.return = TRUE)){
 }
 ```
 
-This training module was developed by Dr. Paul Kruse and Dr. Caroline Ring with contributions from Dr. Julia E. Rager.
+This training module was developed by Paul Kruse (PhD) and Caroline Ring (PhD), with contributions from Julia E. Rager (PhD).
 
 Fall 2023
 
-*Disclaimer: The views expressed in this document are those of the authours and do not necessarily reflect the views or policies of the U.S. EPA.*
+*Disclaimer: The views expressed in this document are those of the authors and do not necessarily reflect the views or policies of the U.S. EPA.*
 
 
 ## Introduction to Training Module
