--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -277,11 +277,11 @@ cat(bpa_mol)
 Finally, we grab an image file for BPA. Note that the image can be a .png or .svg format, and will default to png if none is specified.
 
 ```{r, bpa-image}
-bpa_image_matrix <- get_chemical_image(DTXSID = 'DTXSID7020182',
-                                       API_key = my_key)
-if (requireNamespace("countcolors", quietly = TRUE)){
-  countcolors::plotArrayAsImage(bpa_image_matrix)
-}
+# bpa_image_matrix <- get_chemical_image(DTXSID = 'DTXSID7020182',
+#                                        API_key = my_key)
+# if (requireNamespace("countcolors", quietly = TRUE)){
+#   countcolors::plotArrayAsImage(bpa_image_matrix)
+# }
 ```
 
 If one wants to gather the synonyms of a given chemical, this is also avilable through the chemical APIs as demonstrated below.
